# Turkish-Times

./: .gitignore  Cargo.toml  Dockerfile  deploy.sh  docker-compose.yml
.github/workflows/: deploy.yml
data/: database.sqlite
migrations/: 001_schema.sql
src/: config.rs  main.rs
src/handlers/: mod.rs
src/handlers/admin/: auth.rs  dashboard.rs  episodes.rs  mod.rs  seasons.rs  series.rs  settings.rs  subtitles.rs
src/handlers/api/: mod.rs  search.rs  series.rs
src/handlers/frontend/: episode.rs  home.rs  mod.rs  search.rs  series.rs
src/middleware/: mod.rs
src/models/: admin.rs  episode.rs  mod.rs  season.rs  series.rs  site_setting.rs  subtitle.rs
templates/admin/: dashboard.html
templates/admin/episodes/: create.html  edit.html  index.html
templates/admin/layouts/: app.html
templates/admin/seasons/: create.html  edit.html  index.html
templates/admin/series/: create.html  edit.html  index.html
templates/admin/settings/: edit.html
templates/admin/subtitles/: create.html  edit.html  index.html
templates/frontend/: home.html  search.html
templates/frontend/components/: episode-card.html  series-card.html
templates/frontend/episodes/: show.html
templates/frontend/layouts/: app.html
templates/frontend/series/: index.html  season.html  show.html
